<resources>
    <string name="app_name">SnapRank</string>
    <string name="title_home">Inicio</string>
    <string name="title_search">Buscar</string>
    <string name="title_ranking">Ránking</string>
    <string name="title_profile">Perfil</string>
    <string name="email">Correo electrónico</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Crear cuenta</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="logout_message">¿Está seguro de que desea cerrar sesión?</string>

    <string name="photographer">Fotógrafo: </string>
    <string name="location">Ubicación: </string>
    <string name="category">Categoría: </string>
    <string name="title">Título: </string>

    <string name="award_category">Categoría: </string>
    <string name="award_date">Mes: </string>
    <string name="awards">Logros </string>

    <string name="yes">Sí</string>
    <string name="no">No</string>

    <string name="select_photo">Elegir imagen</string>
    <string name="upload_photo">Aceptar</string>

    <string name="image_description">Descripción</string>
    <string name="image_location">Ubicación</string>

    <string name="all">Todo</string>
    <string name="mountain">Montaña</string>
    <string name="sea">Mar</string>
    <string name="planets">Planetas y satélites</string>
    <string name="friends">Amigos</string>
    <string name="animals">Animales</string>
    <string name="streets">Calles</string>
    <string name="vehicles">Vehículos</string>
    <string name="food">Comida</string>
    <string name="people">Gente</string>
    <string name="music">Música</string>
    <string name="festivals">Festivales</string>
    <string name="culture">Cultura</string>

    <string name="success_upload_photo">Imagen subida correctamente</string>
    <string name="permissions_denied_message">Necesitas los permisos para hacer uso completo de la aplicación</string>

    <!-- Settings screen -->
    <string name="title_activity_settings">Ajustes</string>
    <string name="usermane_hint">Nombre que identifica al usuario</string>

    <string name="password_category">Seguridad</string>
    <string name="password_title">Contraseña</string>
    <string name="password_summary">Cambiar contraseña</string>
    <string name="password_changed">Contraseña cambiada correctamente</string>
    <string name="delete_account">Borrar cuenta</string>

    <string name="delete_accound_message">¿Está seguro de que desea eliminar su cuenta?</string>
    <string name="delete_accound_message_confirmation">Tu cuenta ha sido eliminada correctamente</string>
    <string name="delete_accound_message_fail">Ha habido un problema al eliminar tu cuenta. Prueba en unos minutos</string>
    <string name="profile_pic_changed_message">Foto de perfil cambiada correctamente</string>

    <string name="authentication_failed">Error en la autenticación. Comprueba tus credenciales</string>
    <string name="fail_getting_profile_pic">Ha habido un error al cargar la foto de perfil. Prueba en unos minutos</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="location_hint">Ubicación</string>

    <string name="passwords_do_not_match">Las contraseñas introducidas no coinciden o no los campos no se han rellenado. Prueba otra vez.</string>

    <string name="no_photos_in_category">aún no contiene fotos</string>
    <string name="no_enough_photos_in_category">no tiene suficientes fotos para mostrar</string>
    <string name="no_fields_upload_image">El campo de foto, descripción o localización esta vacío</string>

    <string name="username_alert">Cambiar nombre de usuario</string>
    <string name="new_username">Nuevo nombre de usuario</string>
    <string name="new_username_error">Nombre de usuario vacio o no ha cambiado</string>
    <string name="new_username_taken">Este nombre de usuario ya existe, por favor seleccione otro</string>

    <string name="location_alert">Cambiar localización</string>
    <string name="new_location">Nueva localización</string>
    <string name="do_click">Hiciste click en: </string>
    <string name="new_location_error">El campo de nueva localización está vacío</string>
    <string name="rank_images">MEJORES FOTOGRAFÍAS</string>
    <string name="rank_users">MEJORES USUARIOS</string>
    <string name="see_rank">VER RANKING</string>


</resources>
