<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/all" />
    <item
        android:title="@string/mountain" />
    <item
        android:title="@string/sea" />
    <item
        android:title="@string/planets" />
    <item
        android:title="@string/friends" />
    <item
        android:title="@string/animals"/>
    <item
        android:title="@string/streets"/>
    <item
        android:title="@string/vehicles" />
    <item
        android:title="@string/food" />
    <item
        android:title="@string/people" />
    <item
        android:title="@string/music" />
    <item
        android:title="@string/festivals" />
    <item
        android:title="@string/culture" />

</menu>