<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RankingFragment"
    android:orientation="vertical"
    android:gravity="center"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        app:srcCompat="@drawable/trophy" />

    <TextView
        android:id="@+id/topPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/rank_images"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/toPhotoRanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        android:onClick="onClick"
        android:text="@string/see_rank"/>

    <TextView
        android:id="@+id/topUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/rank_users"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/toUserRanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:onClick="onClick"
        android:text="@string/see_rank" />



</LinearLayout>