<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CC404040"
    >

    <ImageButton
        android:id="@+id/floatingActionButton"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:onClick="close"
        android:background="?android:selectableItemBackground"
        app:srcCompat="@drawable/close24px" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:src="@drawable/taylor"
        android:background="#FFF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="6dp">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/photographer"
            android:textColor="#FFF"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_username_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:text="Ferran Devesa" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="6dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:text="@string/title"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_descripcion_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:text="Taylor Hill"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="6dp">

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:text="@string/category"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_category_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:text="Ladies" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="6dp">

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:text="@string/location"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_location_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:text="USA" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>