<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC404040"
    android:orientation="vertical"
    >

    <ImageButton
        android:id="@+id/floatingActionButton"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:onClick="close"
        app:srcCompat="@drawable/close24px" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_viewPicImagen"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/arenaclock"/>

        <LinearLayout
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="6dp"
                android:gravity=""
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/photographer"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_username_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="..."
                    android:textColor="#FFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_descripcion_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="..."
                    android:textColor="#FFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_category_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="..."
                    android:textColor="#FFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_location_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="..."
                    android:textColor="#FFF" />
            </LinearLayout>
        </LinearLayout>

</LinearLayout>
</LinearLayout>